Link to source code

--- a/web/index.html
+++ b/web/index.html
@@ -21,6 +21,8 @@
         <button type="button" id="alert_button">Validate text circle</button>
         <h2>Outcome</h2>
         <p id="outcome_text">Press 'Validate text circle' button for outcome.</p>
+        <hr>
+        <a href="https://github.com/trichoplax/text-circle-validator" target="_blank" title="View the source code on GitHub">Source code (opens in new tab)</a>
     </body>
 </html>
 
